--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: TLDReceipe
+title: TLDRecipe
 email: hello@tldrecipe.co
 description: >- # this means to ignore newlines until "baseurl:"
-  A running list of things I like to, or used to like to, cook myself and my friends.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://www.tldrecipe.co" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: TLDRecipe
