Updating Gulp script to minify and concat JS files. Cleaned up JS files and separated out functionality. Organized script loading based on environment. Updated README.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "url": "https://github.com/Ryaaaan/TLDRecipe"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.1"
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
-    "simple-jekyll-search": "^1.7.2"
+    "readable-stream": "^3.5.0",
+    "simple-jekyll-search": "^1.7.3"
   }
 }
